--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-pytest-asyncio (0.20.3-1pexip2) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:25:49 +0000
+
 python-pytest-asyncio (0.20.3-1pexip1) pexip; urgency=medium
 
   * New upstream release
