--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-pytest-asyncio (0.20.3-1pexip3) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:57:44 +0000
+
 python-pytest-asyncio (0.20.3-1pexip2) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
